--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -16,11 +16,12 @@ h1 {
     text-align: center;
     font-weight: 700;
     text-shadow: 0px 10px 10px white;
+    line-height: 60px;
 }
 .container {
     width: 644px;
     background-color: white;
-    margin: 80px auto 10px;
+    margin: 80px auto 0px;
     padding: 22px;
     box-sizing: border-box;
     box-shadow:0 0 3px 15px rgba(0, 0, 0, .5);
@@ -86,7 +87,7 @@ h1 {
     border-radius: 10px;
     text-align: center;
     position: absolute;
-    bottom: 20px;
+    bottom: -10px;
     /* opacity: 0;
     transition: 0.3s; */
 }
